ETM-131 - Provide distribution with JRE included.